Fixed scaling issues on mobile

--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Coiny&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Coiny&family=Dongle&display=swap');
 
+* {
+    overscroll-behavior-block: contain;
+    overscroll-behavior: none;
+}
+
 body {
     background-color: #FFF4E3;
-    height: 100vh;
-    width: 100vw;
+    height: 100svh;
+    width: 100svw;
     align-items: center;
     justify-content: center;
     display: flex;
-    overflow: visible;
 }
 
 h1, h2, h3 {
@@ -34,44 +38,63 @@ div {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 #container {
-    height: 100vh;
+    height: 100svh;
     width: 100%;
     max-width: 400px;
-    /* box-shadow: black 0 0 100px; */
     overflow: visible;
+    justify-content: center;
 }
 
 .screen {
     padding: 50px;
+    justify-content: center;
 }
 
 #title-screen::after {
     content: "";
     position: absolute;
-    bottom: 0;
     left: 0;
+    bottom: 0;
     width: 100%;
     height: 50%; 
     background: #EAD8C3; 
     z-index: -1;
+    overflow: hidden;
 }
 
-.big-image {
-    width: 115%;
+#question-area {
+    /* background: gray; */
+    height: 100%;
+    width: 100%;
 }
 
 #question-image {
-    width: 130%;
+    object-fit: contain;
+    /* max-height: 100%; */
+    display: flex;
+    flex-grow: 1;
+    flex-shrink: 0;
+    height: 0;
+    /* display: none; */
 }
 
 #question-text {
     font-size: 1.5rem;
     line-height: 0.9;
-    margin-bottom: -20px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    /* margin-bottom: -20px; */
+    /* display: none; */
+}
+
+#question-buttons-area {
+    /* display: none; */
 }
 
 #info-button, #question-button-1, #question-button-2, #think-faster {
@@ -148,7 +171,10 @@ img, button{
 
 #questions-screen {
     position: relative;
+    width: 100%;
     height: 100%;
+    padding-top: 75px;
+    /* background: black; */
 }
 
 #loading-bar {
@@ -161,7 +187,7 @@ img, button{
 }
 
 img {
-    width: 100%;
+    max-width: 100%;
 }
 
 #chicken-think {
@@ -170,9 +196,18 @@ img {
 
 #result-screen {
     padding: 20px;
+    height: 100svh;
+    justify-content: flex-start;
+    padding-bottom: 2rem;
+    /* overscroll-behavior-block: auto;
+    overscroll-behavior: auto; */
 }
 
 #result-image {
+    margin-bottom: 5px;
+}
+
+#result-next-button {
     margin-bottom: 20px;
 }
 
@@ -188,4 +223,36 @@ img {
 a {
     text-decoration: none;
     color: #BF7474;
+}
+
+.question-section {
+    display: flex;
+    flex-direction: column;
+}
+
+#question-section-top {
+    /* background-color: red; */
+    width: 100%;
+    /* height: 100px; */
+    flex-grow: 0.5;
+    flex-shrink: 0;
+    justify-content: flex-end;
+}
+
+#question-section-middle {
+    /* background-color: blue; */
+    width: 100%;
+    height: 300px;
+    flex-grow: 0;
+    flex-shrink: 1;
+    justify-content: center;
+}
+
+#question-section-bottom {
+    /* background-color: green; */
+    width: 100%;
+    height: 200px;
+    flex-grow: 1;
+    flex-shrink: 0;
+    justify-content: flex-start;
 }
